force-app/main/default/objects/LiveChatTranscript/fields/Contact_Chat_With_Us_Url__c.field-meta.xml
<CustomField>
    <fullName>Contact_Chat_With_Us_Url__c</fullName>
    <formula>IF( External_Site_Id__c = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,   
    $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Chat_Email_Us_PrivacyPolicy__c  ,
IF( External_Site_Id__c = $Label.TECH_VNS_JP_EXTERNAL_SITE_ID , 
    $CustomMetadata.Url_In_Chat_Bot__mdt.vns_jp.Chat_Email_Us_PrivacyPolicy__c ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.dks_jp.Chat_Email_Us_PrivacyPolicy__c 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact/Chat With Us Url</label>
    <type>Text</type>
</CustomField>