force-app/main/default/objects/LiveChatTranscript/fields/Delivery_TBLStore_StoreLocator_Url__c.field-meta.xml
<CustomField>
    <fullName>Delivery_TBLStore_StoreLocator_Url__c</fullName>
    <formula>IF( External_Site_Id__c  = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
     $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Delivery_TBLStore_StoreLocator__c  ,
IF( External_Site_Id__c  = $Label.TECH_VNS_JP_EXTERNAL_SITE_ID ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.vns_jp.Delivery_TBLStore_StoreLocator__c ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.dks_jp.Delivery_TBLStore_StoreLocator__c 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery-TBLStore-StoreLocator-Url</label>
    <type>Text</type>
</CustomField>