force-app/main/default/objects/LiveChatTranscript/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>