force-app/main/default/objects/LiveChatTranscript/fields/External_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Site_Id__c</fullName>
    <defaultValue>$Label.TECH_TBL_JP_EXTERNAL_SITE_ID</defaultValue>
    <label>External Site Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>