force-app/main/default/objects/LiveChatTranscript/fields/MyAccount_HowToCA_Clicking__c.field-meta.xml
<CustomField>
    <fullName>MyAccount_HowToCA_Clicking__c</fullName>
    <formula>IF( $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.MasterLabel = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
     $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.MyAccount_HowToCA_Clicking__c  ,
     &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyAccount-HowToCA-Clicking</label>
    <type>Text</type>
</CustomField>