force-app/main/default/objects/LiveChatTranscript/fields/MyAccount_SignUpNewsLetter_Clicking_Url__c.field-meta.xml
<CustomField>
    <fullName>MyAccount_SignUpNewsLetter_Clicking_Url__c</fullName>
    <formula>IF( $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.MasterLabel = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.MyAccount_SignUpNewsLetter_Clicking__c   ,
   &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyAccount-SignUpNewsLetter-Clicking-Url</label>
    <type>Text</type>
</CustomField>