force-app/main/default/objects/LiveChatTranscript/fields/Other_AboutUs_Doing_Url__c.field-meta.xml
<CustomField>
    <fullName>Other_AboutUs_Doing_Url__c</fullName>
    <formula>IF( $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.MasterLabel = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Other_AboutUs_Doing__c   ,
   &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other-AboutUs-Doing-Url</label>
    <type>Text</type>
</CustomField>