force-app/main/default/objects/LiveChatTranscript/fields/Product_Laces_SeeThem_Url__c.field-meta.xml
<CustomField>
    <fullName>Product_Laces_SeeThem_Url__c</fullName>
    <formula>IF( External_Site_Id__c  = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
     $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Product_Laces_SeeThem__c   ,
     $CustomMetadata.Url_In_Chat_Bot__mdt.dks_jp.Product_Laces_SeeThem__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product-Laces-SeeThem-Url</label>
    <type>Text</type>
</CustomField>