force-app/main/default/objects/LiveChatTranscript/fields/Product_WaterProof_Range_Url__c.field-meta.xml
<CustomField>
    <fullName>Product_WaterProof_Range_Url__c</fullName>
    <formula>IF( $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.MasterLabel = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Product_WaterProof_Range__c   ,
   &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product-WaterProof-Range-Url</label>
    <type>Text</type>
</CustomField>