force-app/main/default/objects/LiveChatTranscript/fields/Returns_DeliverItem_Policy_Url__c.field-meta.xml
<CustomField>
    <fullName>Returns_DeliverItem_Policy_Url__c</fullName>
    <formula>IF(  External_Site_Id__c = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Returns_DeliverItem_PolicyUrl__c   ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.dks_jp.Returns_DeliverItem_PolicyUrl__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returns-DeliverItem-Policy-Url</label>
    <type>Text</type>
</CustomField>