force-app/main/default/objects/LiveChatTranscript/fields/Returns_ExchangeMyItem_ExchangePolicy__c.field-meta.xml
<CustomField>
    <fullName>Returns_ExchangeMyItem_ExchangePolicy__c</fullName>
    <formula>IF( External_Site_Id__c  = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Returns_ExchangeMyItem_ExchangePolicy__c  ,
    $CustomMetadata.Url_In_Chat_Bot__mdt.dks_jp.Returns_ExchangeMyItem_ExchangePolicy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returns-ExchangeMyItem-ExchangePolicy</label>
    <type>Text</type>
</CustomField>