force-app/main/default/objects/LiveChatTranscript/fields/Returns_ReturnPolicy_ReturnPolicy_Url__c.field-meta.xml
<CustomField>
    <fullName>Returns_ReturnPolicy_ReturnPolicy_Url__c</fullName>
    <formula>IF( $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.MasterLabel = $Label.TECH_TBL_JP_EXTERNAL_SITE_ID ,
     $CustomMetadata.Url_In_Chat_Bot__mdt.tbl_jp.Returns_ReturnPolicy_ReturnPolicy__c   ,
    &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returns-ReturnPolicy-ReturnPolicy-Url</label>
    <type>Text</type>
</CustomField>